overflow erro fixed, still not sure why but with starting poll happens every so often

--- a/docs/public/resultsPage/resultsPage.css
+++ b/docs/public/resultsPage/resultsPage.css
@@ -38,7 +38,7 @@
 
 .result {
     border-radius: 20px;
-    height: auto;
+    height: 100%;
     max-height: 10000px;
     width: 550px;
     width: auto;
@@ -66,12 +66,12 @@
 .resultContent {
     /* border: 5px solid black; */
     padding: 6px;
-    height: 100%;
+    height: 85%;
     width: 100%;
     opacity: 1;
     background-color: white;
     overflow: scroll;
-    padding-bottom: 12px;
+    padding-bottom: 100px;
 }
 
 .basicContent {
